# easy_mace

./: .gitignore  CMakeLists.txt  README.md
cmake/: EasyMaceCmakeUtils.cmake  EasyMaceMinDepVersions.cmake
mace/: Android.mk  Application.mk  make.bat  make.sh
mace/codegen/: CMakeLists.txt  mace_dir.h  mace_dir.h.in
mace/codegen/opencl/: encrypt_opencl_kernel.cc  opencl_encrypt_program.cc
mace/codegen/tuning/: tuning_params.cc
mace/codegen/version/: version.cc
mace/core/: CMakeLists.txt  allocator.h  cross_platform_utils.cc  cross_platform_utils.h  file_storage.cc  mace.cc  net.cc  runtime_failure_mock.cc  workspace.cc
mace/core/runtime/cpu/: cpu_runtime.cc
mace/core/runtime/hexagon/: hexagon_control_wrapper.cc  quantize.cc
mace/core/runtime/opencl/: cl2_header.h  opencl_allocator.cc  opencl_runtime.cc  opencl_runtime.h  opencl_wrapper.cc
mace/kernels/: CMakeLists.txt  conv_2d.h  deconv_2d.h  depthwise_conv2d.h  depthwise_deconv2d.h
mace/kernels/opencl/: activation.cc  addn.cc  batch_norm.cc  bias_add.cc  buffer_to_image.cc  channel_shuffle.cc  concat.cc  conv_2d.cc  conv_2d_1x1.cc  conv_2d_3x3.cc  conv_2d_general.cc  crop.cc  deconv_2d_opencl.cc  depth_to_space.cc  depthwise_conv.cc  depthwise_deconv2d_opencl.cc  eltwise.cc  fully_connected.cc  helper.cc  helper.h  image_to_buffer.cc  matmul.cc  pad.cc  pooling.cc  reduce_mean_opencl.cc  resize_bilinear.cc  slice.cc  softmax.cc  space_to_batch.cc  winograd_transform.cc
mace/kernels/opencl/cl/: common.h  depthwise_deconv2d.cl
mace/libmace/: CMakeLists.txt  mace.cc  mace_runtime.cc
mace/ops/: CMakeLists.txt  buffer_to_image.cc  depthwise_deconv2d.cc  depthwise_deconv2d.h  image_to_buffer.cc  ops_register.cc
mace/proto/: CMakeLists.txt  mace.pb.h
mace/public/: CMakeLists.txt  mace_runtime.h
mace/utils/: CMakeLists.txt  env_time.h  memory_logging.h  tuner.h  tuner_development.cc  tuner_production.cc  utils.h
tests/test_example/: CMakeLists.txt  test_example.cc
tests/test_segmentation/: CMakeLists.txt  test_segmentation.cc
unit_tests/mace/ops/: activation_test.cc  addn_test.cc  batch_norm_test.cc  bias_add_test.cc  cast_test.cc  concat_test.cc  conv_2d_test.cc  deconv_2d_test.cc  depthwise_conv2d_test.cc  eltwise_test.cc  folded_batch_norm_test.cc  local_response_norm_test.cc  ops_test_util.h  proposal_test.cc  quantize_test.cc  resize_bilinear_test.cc  slice_test.cc  softmax_test.cc
